--- a/template.tex
+++ b/template.tex
@@ -14,10 +14,10 @@
 %\setlength{\hintscolumnwidth}{3cm}
 %\setlength{\makecvtitlenamewidth}{10cm}
 
-\name{\vspace*{1cm}Tamas}{Spisak}
+\name{\vspace*{1cm}\color{pniblue}Tamas}{Spisak}
 \title{\small Institute for Artificial Intelligence in Medicine \newline
 Institute for Diagnostic and Interventional Radiology and Neuroradiology \newline
-University Hospital Essen, Essen, German
+University Hospital Essen, Essen, Germany
 }
 \address{Girardetstr. 6.}{Essen, Germany, 45131}
 
@@ -34,7 +34,7 @@ University Hospital Essen, Essen, German
 \begin{document}
 \makecvtitle
 \vspace*{-4.8cm}% Insert needed vertical retraction
-{\color{gray}{}\emph{junior research group leader \newline Lab. of Predictive NeuroImaging}}
+{\color{darkgray}{}\emph{junior research group leader \newline Lab. of Predictive NeuroImaging}}
 \vspace*{3cm}% Insert needed vertical retraction
 
 \section{Education}
@@ -46,11 +46,11 @@ University Hospital Essen, Essen, German
 \cventry{2013-2014}{Visiting research fellow}{Kempenhaeghe}{Technical University Eindhoven}{Eindhoven, the Netherlands}{}
 \cventry{2014-2017}{Research Scientist, Analysis Team Leader}{Preclinical MR Imaging and Biomarker Center, Pharmacology and Drug Safety Research, Gedeon Richter Plc.}{Budapest, Hungary}{}{}
 \cventry{2017-2020}{Post-Doc}{Bingel-Lab, Department of Neurology, University Hospital Essen}{Essen, Germany}{}{}
-\cventry{2020-}{Junior Research Group Leader}{Lab. of Predictive Neuroimaging, Institute of Artificial Intelligence in Medicine, Department of Diagnostic and Interventional Radiology and Neuroradiology, University Hospital Essen}{Essen, Germany}{}{}
-\section{Awards and honors}
+\cventry{2020-}{Junior Research Group Leader}{Lab. of Predictive Neuroimaging, \newline Institute of Artificial Intelligence in Medicine, Department of Diagnostic and Interventional Radiology and Neuroradiology, University Hospital Essen}{Essen, Germany}{}{}
+\section{Awards and Grants}
 \cvitem{2013}{'Gy\"orgy Hevesy' award for outstanding scientific achievement, Hungary}
 \cvitem{2013}{Campus Hungary Scholarship, Hungary}
-\cvitem{2013-2014}{National Excellence Grant 'J\ános Ap\áczai Csere', Ministry of Human Capacities, Hungary}
+\cvitem{2013-2014}{National Excellence Grant 'J\'anos Ap\'aczai Csere', \newline Ministry of Human Capacities, Hungary}
 \cvitem{2015}{'Gy\"orgy Hevesy' Izinta award for outstanding interdisciplinary research}
 \cvitem{2015}{'National Excellence Award', Ministry of Human Capacities, Hungary}
 \cvitem{2016}{Main Prize of the Richter Innovative Research Fund, Gedeon Richter Plc.}
@@ -59,23 +59,23 @@ University Hospital Essen, Essen, German
 \newpage
 
 \section{Selected Publications}
-\textbf{Spisak T.}, Kincses B., Schlitt F., Zunhammer M., Schmidt-Wilcke T., Kincses ZT., Bingel U. Pain-free resting-state functional brain connectivity predicts individual pain sensitivity. Nature Communications. 2020 Jan 10;11(1):1-2.
+\textbf{Spis\'ak T.}, Kincses B., Schlitt F., Zunhammer M., Schmidt-Wilcke T., Kincses ZT., Bingel U. Pain-free resting-state functional brain connectivity predicts individual pain sensitivity. Nature Communications. 2020 Jan 10;11(1):1-2.
 
-\textbf{Spisak, T.}, Spisak, Z., Zunhammer, M., Bingel, U., Smith, S., Nichols, T., Kincses, Z.T., Probabilistic TFCE: A generalized combination of cluster size and voxel intensity to increase statistical power, NeuroImage 185, 12-26, 2019
+\textbf{Spis\'ak, T.}, Spis\'ak, Z., Zunhammer, M., Bingel, U., Smith, S., Nichols, T., Kincses, Z.T., Probabilistic TFCE: A generalized combination of cluster size and voxel intensity to increase statistical power, NeuroImage 185, 12-26, 2019
 
-\textbf{Spisák, T.}, Román, V., Papp, E., Kedves, R., Sághy, K., Csölle, C.K., Varga, A., Gajári, D., Nyitrai, G., Spisák, Z. and Kincses, Z.T., 2019. Purkinje cell number-correlated cerebrocerebellar circuit anomaly in the valproate model of autism. Scientific reports, 9(1), pp.1-15.
+\textbf{Spis\'ak, T.}, Román, V., Papp, E., Kedves, R., Sághy, K., Csölle, C.K., Varga, A., Gajári, D., Nyitrai, G., Spisák, Z. and Kincses, Z.T., 2019. Purkinje cell number-correlated cerebrocerebellar circuit anomaly in the valproate model of autism. Scientific reports, 9(1), pp.1-15.
 
-\textbf{Spisak T.}, Kincses, K., Bingel, U. Optimal choice of parameters in functional connectome-based predictive modelling depends on ground truth topology and might be biased by motion: comment on Dadi et al., BioRxiv 2019.
+\textbf{Spis\'ak T.}, Kincses, B., Bingel, U. Optimal choice of parameters in functional connectome-based predictive modelling depends on ground truth topology and might be biased by motion: comment on Dadi et al., BioRxiv 2019.
 
-\textbf{Spisak, T.}, Pozsgay, Z., Aranyi, C., Dávid, S., Kocsis, P., Nyitrai, G., Gajári, D., Emri, M., Czurkó, A. and Kincses, Z.T., Central sensitization-related changes of effective and functional connectivity in the rat inflammatory trigeminal pain model. Neuroscience. 344:133-147, 2016.
+\textbf{Spis\'ak, T.}, Pozsgay, Z., Aranyi, C., D\'avid, S., Kocsis, P., Nyitrai, G., Gaj\'ari, D., Emri, M., Czurk\'o, A. and Kincses, Z.T., Central sensitization-related changes of effective and functional connectivity in the rat inflammatory trigeminal pain model. Neuroscience. 344:133-147, 2016.
 
-\textbf{Spisak, T.}, Jakab, A., Kis, S.A., Opposits, G., Aranyi, C., Berényi, E., Emri, M.: Voxel-Wise Motion Artifacts in Population- Level Brain Connectivity Analysis of Resting-State fMRI. PLOS ONE. 9 (9), e10494, 2014.
+\textbf{Spis\'ak, T.}, Jakab, A., Kis, S.A., Opposits, G., Aranyi, C., Ber\'enyi, E., Emri, M.: Voxel-Wise Motion Artifacts in Population- Level Brain Connectivity Analysis of Resting-State fMRI. PLOS ONE. 9 (9), e10494, 2014.
 
-\textbf{Spisak, T.}, Ossenblok, P., Colon, A., Compagner, W., Kis SA., Opposits, G., Emri, M.: Individual functional statistical parametric networks related to interictal epileptic EEG discharges: a dynamic sliding-window study. ECR Ed.: ESR, European Society of Radiology, [S. l.] C-2088, 2014.
+\textbf{Spis\'ak, T.}, Ossenblok, P., Colon, A., Compagner, W., Kis SA., Opposits, G., Emri, M.: Individual functional statistical parametric networks related to interictal epileptic EEG discharges: a dynamic sliding-window study. ECR Ed.: ESR, European Society of Radiology, [S. l.] C-2088, 2014.
 
-Nyitrai, G., \textbf{Spisak, T.}, Spisák, Z., Gajári, D., Diószegi, P., Kincses, T.Z., Czurkó, A., Stepwise occlusion of the carotid arteries of the rat: MRI assessment of the effect of donepezil and hypoperfusion-induced brain atrophy and white matter microstructural changes. PloS one, 31;13(5):e0198265, 2018.
+Nyitrai, G., \textbf{Spis\'ak, T.}, Spis\'ák, Z., Gaj\'ari, D., Di\'oszegi, P., Kincses, T.Z., Czurk\'o, A., Stepwise occlusion of the carotid arteries of the rat: MRI assessment of the effect of donepezil and hypoperfusion-induced brain atrophy and white matter microstructural changes. PloS one, 31;13(5):e0198265, 2018.
 
-Clemens, B., Puskás, S., Besenyei, M.,\textbf{ Spisak, T}., Opposits, G., Holló́́́dy, K., Fogarasi, A., Fekete, I., Emri, M.: Neurophysiology of juvenile myoclonic epilepsy: EEG-based network and graph analysis of the interictal and immediate preictal states. Epilepsy Res. 106 (3), 357-369, 2013.
+Clemens B, Pusk\'as S, Besenyei M, \textbf{Spis\'ak T}, Opposits G, Hollódy K, Fogarasi A, Fekete I, Emri M. Neurophysiology of juvenile myoclonic epilepsy: EEG-based network and graph analysis of the interictal and immediate preictal states. Epilepsy research. 106(3):357-69. 2011.
 
 \section{Software}
 \begin{itemize}
